--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>{% block title %}Swifthub{% endblock  %}</title>
+  <title>{% block title %}SwiftBoard{% endblock  %}</title>
   {% include "components/css.html" %}
 
   {% block page_css %}{% endblock  %}
