--- a/templates/registration/auth_base.html
+++ b/templates/registration/auth_base.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Swifthub | Log in (v2)</title>
+  <title>SwiftBoard | Log in (v2)</title>
 
   <!-- Google Font: Source Sans Pro -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
@@ -21,7 +21,7 @@
   <!-- /.login-logo -->
   <div class="card card-outline card-primary">
     <div class="card-header text-center">
-      <a href="../../index2.html" class="h1"><b>Swift</b>Hub</a>
+      <a href="../../index2.html" class="h1"><b>Swift</b>Board</a>
     </div>
     {% block content %}
     {% endblock  %}
