changed redirect link of header text in login page to #

--- a/templates/registration/auth_base.html
+++ b/templates/registration/auth_base.html
@@ -21,7 +21,7 @@
   <!-- /.login-logo -->
   <div class="card card-outline card-primary">
     <div class="card-header text-center">
-      <a href="../../index2.html" class="h1"><b>Swift</b>Board</a>
+      <a href="#" class="h1"><b>Swift</b>Board</a>
     </div>
     {% block content %}
     {% endblock  %}
